--- a/01_brief_intro_python.ipynb
+++ b/01_brief_intro_python.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1baffa9d",
    "metadata": {
     "id": "1baffa9d"
@@ -119,11 +119,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "164e9a85-4841-4223-a3ba-6eefb94520dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f2f5fd5-21f4-4617-a0d5-41eff34c34f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cb70030-4a48-435e-994d-661ca0a21ca8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8282c84f-74c0-45f8-b410-3553e69135d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfad5d29-d61a-478f-9936-3a675575630a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "c6d4f31b-dd54-43b9-8fba-e5e1f4f8f0a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "first_name = \"Matt\""
    ]
   },
   {
@@ -141,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "15d7d43e",
    "metadata": {
     "colab": {
@@ -150,17 +191,33 @@
     "id": "15d7d43e",
     "outputId": "98eaba5a-4121-4d78-dea7-825f713e0905"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello world!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "0020d760",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
    "source": [
     "print(age)"
    ]
@@ -179,10 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "1d7e17d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My first name is Matt. Nice to meet you!\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"My first name is {first_name}. Nice to meet you!\")"
    ]
@@ -201,12 +266,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "a944d837",
    "metadata": {
     "id": "a944d837"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'last_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlast_name\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'last_name' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(last_name)"
    ]
@@ -254,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "bf8c7a64",
    "metadata": {
     "colab": {
@@ -264,7 +341,15 @@
     "id": "bf8c7a64",
     "outputId": "57daa3a9-4930-4554-bb21-a272fe0bca5f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(myval)"
    ]
@@ -279,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "d9c1b187",
    "metadata": {
     "id": "d9c1b187"
@@ -315,10 +400,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a7e7c92d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age in three years: 43\n"
+     ]
+    }
+   ],
    "source": [
     "age = 40\n",
     "age_plus = age + 3\n",
@@ -338,12 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "26a00b2a",
    "metadata": {
     "id": "26a00b2a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "z = 3\n",
     "print(z + 6)"
@@ -351,12 +452,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "d46c9233",
    "metadata": {
     "id": "d46c9233"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(z)"
    ]
@@ -449,20 +558,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "253572ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(6))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "fa6d9f42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(6.0))"
    ]
@@ -485,12 +610,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "916cb7f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Add your code here\n"
+    "# Add your code here\n",
+    "x=3.14\n",
+    "print(type(x))"
    ]
   },
   {
@@ -531,14 +666,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "c7808e73",
    "metadata": {
     "id": "c7808e73"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Add your code here\n"
+    "# Add your code here\n",
+    "y=int(x)\n",
+    "print(y)\n",
+    "print(type(y))"
    ]
   },
   {
@@ -623,10 +770,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "ca34bd6a-79a4-443c-9417-be4da1b5f25a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The fourth element in my list is: Fun\n"
+     ]
+    }
+   ],
    "source": [
     "my_list = [1, 35, 5.6, \"Fun\"]\n",
     "print(f\"The fourth element in my list is: {my_list[3]}\")"
@@ -642,12 +797,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "5a591c8f-2fc1-4d25-8170-577ed8cf83f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Experiment with lists here\n"
+    "# Experiment with lists here\n",
+    "my_list[1]"
    ]
   },
   {
@@ -669,10 +836,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "f81cf851-7096-4235-84a8-9cc742b85624",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ahmed is 42 years old\n"
+     ]
+    }
+   ],
    "source": [
     "flabadab = 42\n",
     "ewr_422_yY = 'Ahmed'\n",
@@ -723,12 +898,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "602a749a-fd1f-40e5-a783-1dfc1955aff6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here from above\n"
+    "# Add your code here from above\n",
+    "first_name=\"matt\""
    ]
   },
   {
@@ -788,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "d68f7746",
    "metadata": {
     "id": "d68f7746"
@@ -828,12 +1004,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "fdced80b",
    "metadata": {
     "id": "fdced80b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pi is 3.141592653589793\n",
+      "cos(pi) is -1.0\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "print(f'pi is {math.pi}')\n",
@@ -865,10 +1050,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "bab96f73-3c08-4378-afac-3f91c21c4dd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'acos',\n",
+       " 'acosh',\n",
+       " 'asin',\n",
+       " 'asinh',\n",
+       " 'atan',\n",
+       " 'atan2',\n",
+       " 'atanh',\n",
+       " 'ceil',\n",
+       " 'comb',\n",
+       " 'copysign',\n",
+       " 'cos',\n",
+       " 'cosh',\n",
+       " 'degrees',\n",
+       " 'dist',\n",
+       " 'e',\n",
+       " 'erf',\n",
+       " 'erfc',\n",
+       " 'exp',\n",
+       " 'expm1',\n",
+       " 'fabs',\n",
+       " 'factorial',\n",
+       " 'floor',\n",
+       " 'fmod',\n",
+       " 'frexp',\n",
+       " 'fsum',\n",
+       " 'gamma',\n",
+       " 'gcd',\n",
+       " 'hypot',\n",
+       " 'inf',\n",
+       " 'isclose',\n",
+       " 'isfinite',\n",
+       " 'isinf',\n",
+       " 'isnan',\n",
+       " 'isqrt',\n",
+       " 'lcm',\n",
+       " 'ldexp',\n",
+       " 'lgamma',\n",
+       " 'log',\n",
+       " 'log10',\n",
+       " 'log1p',\n",
+       " 'log2',\n",
+       " 'modf',\n",
+       " 'nan',\n",
+       " 'nextafter',\n",
+       " 'perm',\n",
+       " 'pi',\n",
+       " 'pow',\n",
+       " 'prod',\n",
+       " 'radians',\n",
+       " 'remainder',\n",
+       " 'sin',\n",
+       " 'sinh',\n",
+       " 'sqrt',\n",
+       " 'tan',\n",
+       " 'tanh',\n",
+       " 'tau',\n",
+       " 'trunc',\n",
+       " 'ulp']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dir(math)"
    ]
@@ -885,10 +1144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "d53eb4d1-130c-4160-a714-befeaa16f47f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "from math import cos\n",
     "\n",
@@ -907,10 +1174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "bca772ce-0f34-4cdd-86d0-13b8b2978d6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
    "source": [
     "import math as m\n",
     "\n",
@@ -980,12 +1255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "7398c39b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *Define* the add function displayed above\n"
+    "# *Define* the add function displayed above\n",
+    "def add(x,y):\n",
+    "    '''Takes two values and returns their sum.'''\n",
+    "    sum = x+ y\n",
+    "    return sum"
    ]
   },
   {
@@ -1022,12 +1301,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "000b30bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[52], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# *Call* the add function using any two numbers\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43md\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[50], line 4\u001b[0m, in \u001b[0;36madd\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd\u001b[39m(x,y):\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124;03m'''Takes two values and returns their sum.'''\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;28msum\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mx\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msum\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
    "source": [
-    "# *Call* the add function using any two numbers\n"
+    "# *Call* the add function using any two numbers\n",
+    "add(4,'d')"
    ]
   },
   {
@@ -1041,12 +1334,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "2c837d51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create a function to compute the square of any input number.\n"
+    "# Create a function to compute the square of any input number.\n",
+    "def square(x):\n",
+    "    return x**2\n",
+    "\n",
+    "square(6)"
    ]
   },
   {
@@ -1063,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "83faec58-7f2f-47ce-893c-765a29c36a6c",
    "metadata": {
     "tags": []
@@ -1072,17 +1380,36 @@
    "source": [
     "def powers(number):\n",
     "    '''Takes a number and returns the number's square, cube and 4th power.'''\n",
+    "    print(f'value squared{number**2}, cubed {number**3}, number**4')\n",
     "    return number**2, number**3, number**4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "42303a78-9955-408b-b610-adafb87793db",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value squared4, cubed 8, number**4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(4, 8, 16)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Now call the function\n",
     "powers(2)"
@@ -1100,17 +1427,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "b5ed3963-8550-4cd4-92f8-c2395ddd519d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 8 16\n",
+      "(4, 8, 16)\n",
+      "2 squared is 4, 2 cubed is 8, and 2 to the 4th is 16.\n",
+      "The values returned look like: (4, 8, 16)\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's also make x to use in printing...\n",
     "x = 2 \n",
     "values = powers(x)\n",
-    "\n",
+    "print(values)\n",
     "output = f'{x} squared is {values[0]}, {x} cubed is {values[1]},\\\n",
     " and {x} to the 4th is {values[2]}.'\n",
     "\n",
@@ -1156,13 +1494,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "a01f283e-770a-458a-af3f-1597a9654d39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "powers() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[69], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Experiment with calling the powers function \u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# providing 2 or 4 return variables\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mpowers\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: powers() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
    "source": [
     "# Experiment with calling the powers function \n",
-    "# providing 2 or 4 return variables\n"
+    "# providing 2 or 4 return variables\n",
+    "powers(4,5)"
    ]
   },
   {
@@ -1179,16 +1530,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "11107bae-5dae-4e18-8808-892d5216a66c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "The return of print_number is: None\n"
+     ]
+    }
+   ],
    "source": [
     "def print_number(a):\n",
     "    print(a)\n",
     "    \n",
+    "\n",
     "value = print_number(5)\n",
     "print(f'The return of print_number is: {value}')"
    ]
