--- a/01_brief_intro_python.ipynb
+++ b/01_brief_intro_python.ipynb
@@ -1208,7 +1208,7 @@
     "\n",
     "Functions make coding more straightforward to write, read, and maintain. They reduce repetition and provide discrete mini-programs that can be used repeatedly once written and tested.\n",
     "\n",
-    "We've been using Python functions since the start... `print()` is a function! But the really cool thing is that you can (and should) write functions too! Functions are not complicated or limited to people with special skills. Plus, they can make your coding much more accessible!\n",
+    "We've been using Pvsvsvdython functions since the start... `print()` is a function! But the really cool thing is that you can (and should) write functions too! Functions are not complicated or limited to people with special skills. Plus, they can make your coding much more accessible!\n",
     "\n",
     "Two good indicators of when to write a function are when you are tempted to copy and paste code from one section into another to reuse it or when a section of code needs to be run multiple times in different locations within your code.\n",
     "\n",
