--- a/02_data_analysis_pandas.ipynb
+++ b/02_data_analysis_pandas.ipynb
@@ -5515,7 +5515,8 @@
    "source": [
     "hist = X['gdpPercap_2007'].hist(bins=30, grid=False)\n",
     "hist.set_title('Distribution of 2007 GDP of Countries')\n",
-    "hist.set_ylabel('Count')\n",
+    "hist.set\n",
+    "_ylabel('Count')\n",
     "hist.set_xlabel('GDP in 2007')\n",
     "display(hist)"
    ]
